# GEO_Benchmark_test

./: .env.example  .gitignore  CONTEXT.md  README.md  geo-resource-library-plan.md  pyproject.toml  setup.ps1
GeoEvaluator/: 2026-05-16-geo-evaluator-design.md
config/: alpha_update_sources.yaml  client_acquisition_simulator.without_llms.yaml  client_acquisition_simulator.yaml  client_acquisition_simulator_smoke.yaml  crawler.yaml  eval.yaml  geo_evaluator.yaml  geo_evaluator_example_ai_recommendations_live.yaml  geo_evaluator_example_ai_recommendations_noclaude.yaml  geo_evaluator_example_australia.yaml  geo_evaluator_example_australia_live.yaml  horntech_sources.yaml  intent_signal_matrix.yaml  seo_geo_company_sources.yaml  sources.yaml
docs/: api-run-observability-engineering-plan.md  architecture.md  cloud-database.md  documentation-map.md  ec2-server-runbook.md  latest-update-report-diagnostics.md  next.md  risks.md  run-full-api-client-acquisition.md  run-monitor-engineering-plan.md  single-model-parallel-full-api.md  ui-console.md  wsl2-runbook.md
scripts/: __init__.py  _common.py  alphaxxxx_llms_router.py  build_corpus_variant.py  build_evidence_cards.py  build_keyword_index.py  build_vector_index.py  chunk_documents.py  clean_documents.py  client_acquisition_simulator.py  collect_urls.py  compare_brands.py  compare_llms_ab_reports.py  compare_run_performance.py  crawl_pages.py  crawl_pages_parallel.py  discover_site_urls.py  eval_generation.py  eval_retrieval.py  export_crawl_summary.py  filter_failed_urls.py  filter_new_urls.py  full_api_parallel_runner.py  (+28 more)
(+183 files in other folders)
