[project]
name = "geo-resource-library"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "trafilatura>=1.9",
  "playwright>=1.45",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "pandas>=2.2",
  "qdrant-client>=1.9",
  "FlagEmbedding>=1.2",
  "rank-bm25>=0.2.2",
  "openai>=1.40",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
